--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AsadWrites | Learn Islam, AI Tools & Freelancing</title>
-  <meta name="description" content="AsadWrites is a student-led platform offering Islamic motivation, daily Hadith, latest AI tools reviews, and freelancing tips for career growth. Learn, earn, and grow with tech and Deen.">
-  <meta name="keywords" content="Islamic knowledge, AI tools, freelancing, Quran, Hadith, student career, online earning, ChatGPT, Canva, Fiverr, Upwork">
+  <meta name="description" content="AsadWrites is your go-to resource for modern students. Learn daily Islamic wisdom, explore trending AI tools, and kickstart your freelancing career. All in one platform, beautifully crafted for growth in both Deen and Duniya.">
+  <meta name="keywords" content="Islamic knowledge, AI tools, freelancing, Quran, Hadith, student career, online earning, ChatGPT, Canva, Fiverr, Upwork, productivity, deen and duniya">
   <meta name="author" content="Mohammad Asad">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
@@ -23,61 +23,68 @@
     header {
       background-color: #1e293b;
       color: #fff;
-      padding: 20px 40px;
+      padding: 25px 40px;
       text-align: center;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     }
     header h1 {
-      font-size: 2.8rem;
+      font-size: 3rem;
     }
     nav {
       background: #0f172a;
-      padding: 12px 40px;
+      padding: 14px 40px;
       display: flex;
       justify-content: center;
-      gap: 35px;
+      gap: 40px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.06);
     }
     nav a {
       color: #f1f5f9;
       text-decoration: none;
       font-weight: 500;
+      transition: color 0.3s ease;
     }
     nav a:hover {
       color: #38bdf8;
     }
     section.hero {
       text-align: center;
-      padding: 80px 20px;
+      padding: 90px 20px;
       background: linear-gradient(135deg, #3b82f6, #06b6d4);
       color: #fff;
+      box-shadow: inset 0 8px 12px rgba(0,0,0,0.08);
     }
     .hero h2 {
-      font-size: 2.8rem;
-      margin-bottom: 15px;
+      font-size: 3rem;
+      margin-bottom: 20px;
     }
     .hero p {
-      font-size: 1.15rem;
+      font-size: 1.2rem;
       max-width: 700px;
       margin: 0 auto;
     }
     section.content {
-      padding: 60px 40px;
+      padding: 70px 40px;
       display: grid;
-      gap: 35px;
+      gap: 45px;
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
     }
     .card {
       background: white;
-      border-radius: 14px;
+      border-radius: 16px;
       padding: 30px;
-      box-shadow: 0 6px 14px rgba(0,0,0,0.06);
-      transition: transform 0.3s ease;
+      box-shadow: 0 8px 18px rgba(0,0,0,0.06);
+      transition: all 0.3s ease;
+      border: 1px solid #e2e8f0;
     }
     .card:hover {
-      transform: translateY(-5px);
+      transform: translateY(-8px);
+      box-shadow: 0 12px 25px rgba(0,0,0,0.08);
     }
     .card h3 {
-      margin-bottom: 12px;
+      margin-bottom: 14px;
       color: #1e293b;
+      font-size: 1.4rem;
     }
     .card p {
       font-size: 1rem;
@@ -86,13 +93,14 @@
       text-align: center;
       background: #1e293b;
       color: #fff;
-      padding: 30px 20px;
-      margin-top: 60px;
+      padding: 35px 20px;
+      margin-top: 80px;
+      font-size: 0.95rem;
     }
     .card img {
       max-width: 100%;
-      border-radius: 10px;
-      margin-bottom: 15px;
+      border-radius: 12px;
+      margin-bottom: 18px;
     }
   </style>
 </head>
@@ -108,6 +116,7 @@
     <a href="#">AI Tools</a>
     <a href="#">Freelancing</a>
     <a href="#">About Me</a>
+    <a href="#">Blog</a>
   </nav>
 
   <section class="hero">
@@ -117,19 +126,19 @@
 
   <section class="content">
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1591604157118-b94e2684f857?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxjb2xsZWN0aW9uLXBhZ2V8Mjl8ZHJjWElRTGI0SnN8fGVufDB8fHx8fA%3D%3D" alt="Hadith of the Day">
+      <img src="https://images.unsplash.com/photo-1601191362988-ac6ebec629c8?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTh8fGlzbGFtaWN8ZW58MHx8MHx8fDA%3D" alt="Hadith of the Day">
       <h3>💬 Hadith of the Day</h3>
-      <p>"Indeed, My mercy prevails over My wrath." — Sahih Bukhari</p>
+      <p>"Indeed, My mercy prevails over My wrath." — Sahih Bukhari. Start your day with timeless wisdom from Prophet Muhammad ﷺ.</p>
     </div>
     <div class="card">
       <img src="https://plus.unsplash.com/premium_photo-1726666269043-fb16e54646d0?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8YWklMjB0b29sc3xlbnwwfHwwfHx8MA%3D%3D" alt="AI Tools for Students">
       <h3>🤖 AI Tool Guide</h3>
-      <p>Unlock the best free AI tools like ChatGPT, Canva Magic Write, and more to boost your creativity and productivity.</p>
+      <p>Unlock the best free AI tools like ChatGPT, Canva Magic Write, and more to boost your creativity, content, and coding skills.</p>
     </div>
     <div class="card">
-      <img src="https://images.unsplash.com/photo-1493119508027-2b584f234d6c?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTV8fGZyZWVsYW5jaW5nfGVufDB8fDB8fHww" alt="Freelancing from Home">
+      <img src="https://images.unsplash.com/photo-1626196607758-266f19558d3f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjR8fGZyZWVsYW5jZSUyMGVhcm5pbmd8ZW58MHx8MHx8fDA%3D" alt="Freelancing from Home">
       <h3>💼 Freelancing 101</h3>
-      <p>Learn how to earn from home using skills like design, writing, or voice-over — even if you're just starting out.</p>
+      <p>Learn how to earn from home using skills like design, writing, or voice-over — even if you're starting from zero experience.</p>
     </div>
   </section>
 
